--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -25,28 +25,19 @@
               <li>
                 <div class="navbar-login">
                   <div class="row">
-                    <div class="col-sm-4">
-                      <p class="text-center">
-                        <img style="max-height:95px;width:130px;" class="img-circle icon-size" src="../DigitizedBill/assets/img/userimg.jpg">
-                      </p>
-                    </div>
                     <div class="col-sm-8">
-                      <p class="nav-text text-left"><strong>User Name</strong></p>
-                      <p class="nav-text text-left small">user@gmail.com</p>
-                      <p class="text-left">
-                        <a href="#" class="btn btn-primary btn-block btn-sm">Profile</a>
-                      </p>
+                      <p class="nav-text text-left"><strong>{{user.firstName}}</strong></p>
+                      <p class="nav-text text-left small">{{user.emailId}}</p>
                     </div>
                   </div>
                 </div>
               </li>
-              <li class="divider"></li>
               <li>
                 <div class="navbar-login navbar-login-session">
                   <div class="row">
                     <div class="col-lg-12">
                       <p>
-                        <a href="#" class="btn btn-danger btn-block"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logut</a>
+                        <a href="#" class="btn btn-danger btn-block" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logut</a>
                       </p>
                     </div>
                   </div>
